welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
  for(k<-0 to nums.length-1){
    if(nums(k)==1 || nums(k)== 2 || nums(k)==3){
      return true
    }
    return false
  }
}